--- a/web/templates/cmdb.html
+++ b/web/templates/cmdb.html
@@ -264,6 +264,7 @@
             <a href="/inventory">Inventory</a>
             <a href="/storage">Storage</a>
             <a href="/logs">All Logs</a>
+            <a href="/agent">Agent</a>
         </div>
 
         <div class="stats-bar">
