--- a/web/templates/logs.html
+++ b/web/templates/logs.html
@@ -35,6 +35,7 @@
         <div class="nav-links">
             <a href="/">&larr; Back to Playbooks</a>
             <a href="/schedules">Schedules</a>
+            <a href="/agent">Agent</a>
         </div>
 
         {% if logs %}
