--- a/web/templates/playbooks.html
+++ b/web/templates/playbooks.html
@@ -42,6 +42,7 @@
             <a href="/inventory">Inventory</a>
             <a href="/storage">Storage</a>
             <a href="/logs">All Logs</a>
+            <a href="/agent">Agent</a>
             <span class="connection-indicator">
                 <span class="connection-dot" id="connectionDot"></span>
                 <span id="connectionText">Connecting...</span>
