--- a/web/templates/schedules.html
+++ b/web/templates/schedules.html
@@ -42,6 +42,7 @@
             <a href="/inventory">Inventory</a>
             <a href="/storage">Storage</a>
             <a href="/logs">All Logs</a>
+            <a href="/agent">Agent</a>
         </div>
 
         <div class="action-bar">
