--- a/web/templates/storage.html
+++ b/web/templates/storage.html
@@ -182,6 +182,7 @@
             <a href="/schedules">Schedules</a>
             <a href="/inventory">Inventory</a>
             <a href="/logs">All Logs</a>
+            <a href="/agent">Agent</a>
         </div>
 
         <!-- Stats Overview -->
