--- a/web/templates/inventory.html
+++ b/web/templates/inventory.html
@@ -405,7 +405,8 @@
             <a href="/playbooks">Playbooks</a>
             <a href="/schedules">Schedules</a>
             <strong><a href="/inventory">CMDB</a></strong>
-            <a href="/storage">Storage Info</a>
+            <a href="/storage">Storage</a>
+            <a href="/config">Config</a>
             <a href="/logs">All Logs</a>
             <a href="/agent">Agent</a>
         </div>
