--- a/web/templates/log_view.html
+++ b/web/templates/log_view.html
@@ -57,6 +57,7 @@
             <a href="/">&larr; Back to Playbooks</a>
             <a href="/schedules">Schedules</a>
             <a href="/logs">All Logs</a>
+            <a href="/config">Config</a>
             <a href="/agent">Agent</a>
         </div>
 
