--- a/web/templates/cluster.html
+++ b/web/templates/cluster.html
@@ -233,6 +233,7 @@
             <a href="/cmdb">CMDB</a>
             <a href="/inventory">Inventory</a>
             <a href="/storage">Storage</a>
+            <a href="/config">Config</a>
             <a href="/logs">All Logs</a>
             <a href="/cluster" style="font-weight: bold;">Cluster</a>
             <span class="connection-indicator">
