--- a/web/templates/cmdb.html
+++ b/web/templates/cmdb.html
@@ -263,6 +263,7 @@
             <a href="/schedules">Schedules</a>
             <a href="/inventory">Inventory</a>
             <a href="/storage">Storage</a>
+            <a href="/config">Config</a>
             <a href="/logs">All Logs</a>
             <a href="/agent">Agent</a>
         </div>
