--- a/web/templates/job_status.html
+++ b/web/templates/job_status.html
@@ -122,6 +122,7 @@
             <a href="/">&larr; Back to Dashboard</a>
             <a href="/playbooks">Playbooks</a>
             <a href="/cluster">Cluster</a>
+            <a href="/config">Config</a>
         </div>
 
         <div class="job-card">
