--- a/web/templates/schedules.html
+++ b/web/templates/schedules.html
@@ -41,6 +41,7 @@
             <a href="/cmdb">CMDB</a>
             <a href="/inventory">Inventory</a>
             <a href="/storage">Storage</a>
+            <a href="/config">Config</a>
             <a href="/logs">All Logs</a>
             <a href="/agent">Agent</a>
         </div>
