--- a/web/templates/storage.html
+++ b/web/templates/storage.html
@@ -181,6 +181,7 @@
             <a href="/">Home</a>
             <a href="/schedules">Schedules</a>
             <a href="/inventory">Inventory</a>
+            <a href="/config">Config</a>
             <a href="/logs">All Logs</a>
             <a href="/agent">Agent</a>
         </div>
